--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,21 +8,22 @@
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./styles.css">
 </head>
+
 <body>
     <div class="main-container border1">
         <header class="border2">
-        <div class="logo">
-            <img src="./Images/CGL.PNG">
-        </div>
-        <nav class="border1">
-            <ul class="">
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Inspo</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href="">Contact</a></li>
-            </ul>
-        </nav>
+            <div class="logo">
+                <img src="./Images/CGL.PNG">
+            </div>
+            <nav class="border1">
+                <ul class="">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Inspo</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </nav>
         </header>
         <section class="border2">
             <div class="section-text">
@@ -33,6 +35,27 @@
             </div>
         </section>
         <section class="border2"></section>
-        <footer class="border2"></footer>
+        <Div>
+            <ul>
+                <li>
+                    <a href="gallery.html">
+                        <img src="./Images/The Mouth.PNG" <span>The Mouth</span </a>
+                </li>
+                <li>
+                    <a href="gallery.html">
+                        <img src="./Images/The Brains.PNG">
+                        <span>The Brains</span>
+                    </a>
+                </li>
+                <li>
+                     <a href="gallery.html">
+                        <img src="./Images/The Stylist.PNG">
+                        <span>The Stylist</span>
+                     </a>
+                </li>
+            </ul>
+</Div>
+    
     </div>
+
 </html>
