--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery</title>
     <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./gallery.css">
+    <link rel="stylesheet" href="./gallery.css"
 </head>
 <body>
     <div id="header">
@@ -31,7 +31,6 @@
                 </li>
             </li>
         </ul>
-
     </div>
     <div id="body">
         <h1>
@@ -40,6 +39,30 @@
         <ul class="gallery">
             <li>
                 <img src="./Images/HM1.PNG"
+            </li>
+            <li>
+                <img src="./Images/HM2.PNG"
+            </li>
+            <li>
+                <img src="./Images/HM3.PNG"
+            </li>
+            <li>
+                <img src="./Images/HM4.PNG"
+            </li>
+            <li>
+                <img src="./Images/HM5.PNG"
+            </li>
+            <li>
+                <img src="./Images/HM6.PNG"
+            </li>
+            <li>
+                <img src="./Images/HM7.PNG"
+            </li>
+            <li>
+                <img src="./Images/HM8.PNG"
+            </li>
+            <li>
+                <img src="./Images/HM9.PNG"
             </li>
         </ul>
     </div>
