--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,7 @@
                 <a href="about.html">about</a>
             </li>
             <li>
-                <a href="gallery.html">gallery</a>
+                <a href="gallery.html">Inspo</a>
             </li>
             <li>
                 <a href="blog.html">blog</a>
@@ -34,7 +34,7 @@
     </div>
     <div id="body">
         <h1>
-            <span>gallery</span>
+            <span>inspo</span>
         </h1>
         <ul class="gallery">
             <li>
